--- a/src/index.html
+++ b/src/index.html
@@ -14,3 +14,8 @@
     <script src="index.js"></script>
   </body>
 </html>
+
+<!-- <svg class="comics-item-icon" width="70" height="70">
+                  <use href="./img/icons.svg#icon-clock"></use>
+                </svg>
+              </div> -->
